* Fixed: WooCommerce deprecated use of `WC_Cart::get_cart_url`.
* Fixed: When text logo is used with Agent base and dark-colored header, header text was not colored properly so it could be seen.
* Fixed: Custom layout builder elements are now hooked to an action `themeblvd_element_{$type}` instead of just `themeblvd_{$type}`, to not conflict with filtering standard output of elements.
* Removed: No more support for thumbnail borders; the filter `themeblvd_featured_thumb_frame` has been removed. Use CSS customization instead.
* Removed: No more support for [Theme Blvd Sliders](https://wordpress.org/plugins/theme-blvd-sliders/) plugin.
* Removed: No more html5shiv for HTML5 compatibility with IE8.
* Removed: The deprecated "featured" areas (as of framework 2.5), using `themeblvd_featured_*` action hooks have been completely removed.
* Updated: Chart.js to 2.7.1.
* Updated: easyPieChart to 2.1.6.
* Updated: Isotope to 3.0.4.

* **Important Developer Notes:**
	* If you have [template part files](http://dev.themeblvd.com/tutorial/template-parts-framework-2-5/) in your child theme, they MUST be moved into a directory named `template-parts`.
	* Removed the deprecated action hook, `themeblvd_header_above`; use `themeblvd_header_content` or `themeblvd_header_top` instead.
	* Removed the deprecated action hook, `themeblvd_header_above`; use `themeblvd_header_content` or `themeblvd_header_top` instead.
	* The files `content-template_archives.php` and `content-template_sitemap.php` were renamed to `content-template-archives.php` and `content-template-sitemap.php`.

--------------------------------------------------------------

2.1.14 - 11/08/2017
-------------------

* **Updated Theme Blvd framework to 2.6.13**
* Improvement: Better consistency loading background video from YouTube and Vimeo.
* Improvement: Include all frontend functionality generally for better compatibility for third-party plugins that may be incorporating frontend components within the admin panel.