@@ -63,9 +63,15 @@ Author URI: http://www.themeblvd.com
 }
 
 /* Header Logo */
+@media (min-width: 768px) {
+	.site-header.dark .header-text-logo .tb-text-logo,
+	.site-header.dark .header-text-logo .tagline {
+		color: #fff;
+	}
+}
 @media (max-width: 767px) {
 	.mobile-light .header-text-logo .tb-text-logo {
-		color: #222222;
+		color: #222;
 	}
 }
 @media (min-width: 992px) {
